doctorapp/force-app/main/default/objects/Loyalty_Points_Log__c/Loyalty_Points_Log__c.object-meta.xml
<CustomObject>
    <description>Tracks loyalty points earned or spent.</description>
    <label>Loyalty Points Log</label>
    <nameField>
        <displayFormat>LPL-{000000}</displayFormat>
        <label>Loyalty Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty Points Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>