doctorapp/force-app/main/default/objects/Loyalty_Points_Log__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>References Customer.</description>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Loyalty Points Logs</relationshipLabel>
    <relationshipName>Loyalty_Points_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>