doctorapp/force-app/main/default/objects/Loyalty_Points_Log__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <description>Positive for earned, negative for spent.</description>
    <label>Points</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>