doctorapp/force-app/main/default/objects/Loyalty_Points_Log__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason for the points change.</description>
    <label>Reason</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>