doctorapp/force-app/main/default/objects/Loyalty_Points_Log__c/fields/Sale__c.field-meta.xml
<CustomField>
    <fullName>Sale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The sale the points were earned from, if any.</description>
    <label>Sale</label>
    <referenceTo>Sale__c</referenceTo>
    <relationshipLabel>Loyalty Points Logs</relationshipLabel>
    <relationshipName>Loyalty_Points_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>