doctorapp/force-app/main/default/objects/Loyalty_Points_Log__c/validationRules/Points_Not_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Points_Not_Zero</fullName>
    <active>true</active>
    <description>A log entry must move the balance.</description>
    <errorConditionFormula>Points__c = 0</errorConditionFormula>
    <errorMessage>Points cannot be zero.</errorMessage>
    <errorDisplayField>Points__c</errorDisplayField>
</ValidationRule>